--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGO_DEV_URI='mongodb+srv://asadk7350:337@cluster0.zagvlsl.mongodb.net/'
+MONGO_DEV_URI='mongodb+srv://asadk7350:Khanf337@cluster0.zagvlsl.mongodb.net/'
 API_PREFIX = '/api'
