auth and s3 integration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT = 3000
-MONGO_DEV_URI='mongodb+srv://asadk7350:Khanf337@cluster0.zagvlsl.mongodb.net/'
+MONGO_DEV_URI='mongodb+srv://asadk7350:*****@cluster0.zagvlsl.mongodb.net/'
 API_PREFIX = '/api'
+JWT_PRIVATE_KEY = 'sadsad34123312
+AWS_ACCESS_KEY_ID = '*****'
+AWS_SECRET_ACCESS_KEY= 'Umo/*******/******'
+AWS_REGION=ap-south-1  
+S3_BUCKET_NAME=your-bucket-name
